RESOLVED FIXED123944
Remote Layer Tree: RemoteLayerBackingStore partial repaint is broken for the tile cache
https://bugs.webkit.org/show_bug.cgi?id=123944
Summary Remote Layer Tree: RemoteLayerBackingStore partial repaint is broken for the ...
Tim Horton
Reported 2013-11-06 17:29:37 PST
Because of the way repaint rects work through TileController, we're repainting the whole tile every time.
Attachments
patch (25.34 KB, patch)
2013-11-07 17:38 PST, Tim Horton
no flags
patch (25.42 KB, patch)
2013-11-07 18:09 PST, Tim Horton
buildbot: commit-queue-
accidental SPI (25.42 KB, patch)
2013-11-08 11:25 PST, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-11-07 17:38:51 PST
WebKit Commit Bot
Comment 2 2013-11-07 17:41:29 PST
Attachment 216346 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/WebCore.exp.in', u'Source/WebCore/platform/graphics/ca/PlatformCALayer.h', u'Source/WebCore/platform/graphics/ca/mac/PlatformCALayerMac.h', u'Source/WebCore/platform/graphics/ca/mac/PlatformCALayerMac.mm', u'Source/WebCore/platform/graphics/ca/mac/TileController.mm', u'Source/WebCore/platform/graphics/mac/WebLayer.h', u'Source/WebCore/platform/graphics/mac/WebLayer.mm', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Shared/mac/RemoteLayerBackingStore.h', u'Source/WebKit2/Shared/mac/RemoteLayerBackingStore.mm', u'Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemote.cpp', u'Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemote.h']" exit_code: 1 Source/WebCore/platform/graphics/ca/mac/PlatformCALayerMac.h:144: The parameter name "context" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2013-11-07 18:09:02 PST
Build Bot
Comment 4 2013-11-07 18:39:46 PST
Build Bot
Comment 5 2013-11-07 19:13:02 PST
Build Bot
Comment 6 2013-11-07 20:08:28 PST
Tim Horton
Comment 7 2013-11-08 11:25:50 PST
Created attachment 216416 [details] accidental SPI
Simon Fraser (smfr)
Comment 8 2013-11-08 17:35:00 PST
Comment on attachment 216416 [details] accidental SPI View in context: https://bugs.webkit.org/attachment.cgi?id=216416&action=review > Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > + > + * platform/graphics/ca/PlatformCALayer.h: High level summary please! > Source/WebCore/ChangeLog:30 > + has at least one layer in it (appending the clip bounds if we don't one rect? > Source/WebCore/platform/graphics/mac/WebLayer.mm:112 > + graphicsContext.clip(rect); In the one-rect case you're clipping here where you didn't before, but that's probably OK.
Tim Horton
Comment 9 2013-11-08 17:42:16 PST
Note You need to log in before you can comment on or make changes to this bug.